<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssz.sqlitedemo.MainActivity">

    <Button
        android:id="@+id/btn_create_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_db"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_db"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_data"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button" />

    <Button
        android:id="@+id/btn_delete_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_db"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="136dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_data"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_data"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_data"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button5" />

</LinearLayout>
