<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssz.sqlitedemo.MainActivity">

    <Button
        android:id="@+id/btn_create_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_db"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_update_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_db"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_insert_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_data"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_db"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/btn_update_db"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btn_update_db" />

    <Button
        android:id="@+id/btn_delete_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_db"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="136dp" />

    <Button
        android:id="@+id/btn_update_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_data"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_insert_data"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/btn_insert_data"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btn_insert_data" />

    <Button
        android:id="@+id/btn_query_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_data"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_data"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/btn_update_data"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btn_update_data" />

    <Button
        android:id="@+id/btn_delete_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_data"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_query_data"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/btn_query_data"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btn_query_data" />

</android.support.constraint.ConstraintLayout>
